--- a/package.json
+++ b/package.json
@@ -39,7 +39,6 @@
   "devDependencies": {
     "autoprefixer": "^9.8.6",
     "postcss-cli": "^7.1.1",
-    "tailwindcss": "^1.7.5",
-    "uuid": "^8.3.0"
+    "tailwindcss": "^1.7.5"
   }
 }
